syntax = "proto3";

package ticketing;

message Empty {}

message Match {
  int32 id = 1;
  string teamA = 2;
  string teamB = 3;
  double ticketPrice = 4;
  int32 availableSeats = 5;
}

message MatchList {
  repeated Match matches = 1;
}

message BuyTicketRequest {
  int32 matchId = 1;
  int32 userId = 2;
  string customerName = 3;
  int32 seats = 4;
}

message BuyTicketResponse {
  bool success = 1;
  string message = 2;
}

service TicketService {
  rpc GetAllMatches(Empty) returns (MatchList);
  rpc BuyTicket(BuyTicketRequest) returns (BuyTicketResponse);
}
